Latest google format style reformatted a the code every so slightly.