@@ -1,10 +1,8 @@
 package net.bramp.objectgraph.test;
 
-/**
- * @author bramp
- */
+/** @author bramp */
 public class ArrayTestClass {
   public int[] singleInt = new int[] {1, 2};
-  public int[][] multiInt = new int[][] { {3, 4}, {5, 6}};
-  public Integer[] singleInteger = new Integer[] {new Integer(7), new Integer(8)};
+  public int[][] multiInt = new int[][] {{3, 4}, {5, 6}};
+  public Integer[] singleInteger = new Integer[] {Integer.valueOf(7), Integer.valueOf(8)};
 }
