@@ -1,9 +1,7 @@
 package net.bramp.objectgraph.test;
 
-/**
- * @author bramp
- */
+/** @author bramp */
 public class PrimitiveTestClass {
-  public Long bigLong = new Long(1);
+  public Long bigLong = Long.valueOf(1);
   public long smallLong = 1;
 }
